--- a/src/Antix.EASI.Web/client/examiners/create/examiners-create.cshtml
+++ b/src/Antix.EASI.Web/client/examiners/create/examiners-create.cshtml
@@ -36,7 +36,7 @@
                ng-click="cancel()">
                 Cancel
             </a>
-            <button class="btn btn-primary"
+            <button class="btn btn-primary" type="submit"
                     ng-disabled="!data"
                     ng-click="create(form, data)">
                 Create
