--- a/src/Antix.EASI.Web/client/examiners/select/examiners-select.cshtml
+++ b/src/Antix.EASI.Web/client/examiners/select/examiners-select.cshtml
@@ -6,7 +6,7 @@
                typeahead="i as i.name for i in get($viewValue) | filter:$viewValue | limitTo:8" />
         <div class="input-group-btn">
             <a href="#/examiners/{{selected.id}}/edit" class="btn btn-default"
-               ng-disabled="!selected">
+               ng-disabled="!selected.id">
                 <span class="fa fa-pencil"></span>
             </a>
             <button create-examiner="select(model)"
