--- a/src/Antix.EASI.Web/client/examinations/create/examinations-create.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/create/examinations-create.cshtml
@@ -62,7 +62,7 @@
             <span class="pull-right">
                 <button class="btn btn-primary"
                         ng-click="create()">
-                    Update
+                    Create
                 </button>
             </span>
         </div>
