--- a/src/Antix.EASI.Web/client/examinations/region-score/examination-region-score.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/region-score/examination-region-score.cshtml
@@ -1,27 +1,27 @@
 ﻿<div class="examination-region-score">
     <div class="row">
-        <label class="control-label small col-md-3">Erthema</label>
+        <label class="control-label col-md-3">Erthema</label>
         <div class="col-md-9">
             <div examination-severity-score
                  ng-model="model.erthema"></div>
         </div>
     </div>
     <div class="row">
-        <label class="control-label small col-md-3">Edema Papulation</label>
+        <label class="control-label col-md-3">Edema Papulation</label>
         <div class="col-md-9">
             <div examination-severity-score
                  ng-model="model.edemaPapulation"></div>
         </div>
     </div>
     <div class="row">
-        <label class="control-label small col-md-3">Excoriation</label>
+        <label class="control-label col-md-3">Excoriation</label>
         <div class="col-md-9">
             <div examination-severity-score
                  ng-model="model.excoriation"></div>
         </div>
     </div>
     <div class="row">
-        <label class="control-label small col-md-3">Lichenification</label>
+        <label class="control-label col-md-3">Lichenification</label>
         <div class="col-md-9">
             <div examination-severity-score
                  ng-model="model.lichenification"></div>
