--- a/src/Antix.EASI.Web/client/examinations/region-score/examination-region-score.less
+++ b/src/Antix.EASI.Web/client/examinations/region-score/examination-region-score.less
@@ -5,6 +5,10 @@
     label {
         padding-top: 10px;
         font-weight: 100;
+        font-size:.85em;
+    }
+    .btn{
+        font-size:.75em;
     }
 }
 
