--- a/src/Antix.EASI.Web/client/examinations/region-score/examination-region-score.css
+++ b/src/Antix.EASI.Web/client/examinations/region-score/examination-region-score.css
@@ -1,6 +1,10 @@
 ﻿.examination-region-score label {
   padding-top: 10px;
   font-weight: 100;
+  font-size: .85em;
+}
+.examination-region-score .btn {
+  font-size: .75em;
 }
 .examination-severity-score {
   padding-bottom: 5px;
