--- a/src/Antix.EASI.Web/client/examinations/region-score/examination-region-score.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/region-score/examination-region-score.cshtml
@@ -30,13 +30,13 @@
     <div class="form-group">
         <label class="control-label small">Area</label>
         <div class="btn-group btn-group-justified">
-            <label class="btn btn-default" ng-model="model.area" btn-radio="0" uncheckable>0%</label>
-            <label class="btn btn-default" ng-model="model.area" btn-radio="1" uncheckable>9%</label>
-            <label class="btn btn-default" ng-model="model.area" btn-radio="2" uncheckable>29%</label>
-            <label class="btn btn-default" ng-model="model.area" btn-radio="3" uncheckable>49%</label>
-            <label class="btn btn-default" ng-model="model.area" btn-radio="4" uncheckable>69%</label>
-            <label class="btn btn-default" ng-model="model.area" btn-radio="5" uncheckable>89%</label>
-            <label class="btn btn-default" ng-model="model.area" btn-radio="6" uncheckable>100%</label>
+            <label class="btn btn-default" ng-model="model.area" btn-radio="0">0%</label>
+            <label class="btn btn-default" ng-model="model.area" btn-radio="1">9%</label>
+            <label class="btn btn-default" ng-model="model.area" btn-radio="2">29%</label>
+            <label class="btn btn-default" ng-model="model.area" btn-radio="3">49%</label>
+            <label class="btn btn-default" ng-model="model.area" btn-radio="4">69%</label>
+            <label class="btn btn-default" ng-model="model.area" btn-radio="5">89%</label>
+            <label class="btn btn-default" ng-model="model.area" btn-radio="6">100%</label>
         </div>
     </div>
 </div>
