--- a/src/Antix.EASI.Web/client/examinations/region-score/examination-severity-score.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/region-score/examination-severity-score.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="examination-severity-score btn-group btn-group-justified">
-    <label class="btn btn-default" ng-model="model" btn-radio="0" uncheckable>None</label>
-    <label class="btn btn-default" ng-model="model" btn-radio="1" uncheckable>Mild</label>
-    <label class="btn btn-default" ng-model="model" btn-radio="2" uncheckable>Moderate</label>
-    <label class="btn btn-default" ng-model="model" btn-radio="3" uncheckable>Severe</label>
+    <label class="btn btn-default" ng-model="model" btn-radio="0">None</label>
+    <label class="btn btn-default" ng-model="model" btn-radio="1">Mild</label>
+    <label class="btn btn-default" ng-model="model" btn-radio="2">Moderate</label>
+    <label class="btn btn-default" ng-model="model" btn-radio="3">Severe</label>
 </div>
