--- a/src/Antix.EASI.Web/client/examinations/create/examinations-create.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/create/examinations-create.cshtml
@@ -12,59 +12,62 @@
             Create Examination
         </h3>
 
-        <div class="form-group">
-            <label class="control-label">Date and Time</label>
-            <div class="input-group">
-                <input class="form-control" placeholder="(date of examination)"
-                       datepicker-popup="medium" is-open="opened"
-                       name="takenOn"
-                       ng-model="data.takenOn"
-                       ng-required="true" />
-                <span class="input-group-btn">
-                    <a href class="btn btn-default" ng-click="opened=true">
-                        <span class="fa fa-calendar"></span>
-                    </a>
+        <div class="examination-row">
+            <div class="form-group">
+                <label class="control-label">Date and Time</label>
+                <div class="input-group">
+                    <input class="form-control" placeholder="(date of examination)"
+                           datepicker-popup="medium" is-open="opened"
+                           name="takenOn"
+                           ng-model="data.takenOn"
+                           ng-required="true" />
+                    <span class="input-group-btn">
+                        <a href class="btn btn-default" ng-click="opened=true">
+                            <span class="fa fa-calendar"></span>
+                        </a>
+                    </span>
+                </div>
+
+                <div class="errors"
+                     ng-messages="form.takenOn.$errors"
+                     ng-if="form.takenOn.$invalid">
+                    <div ng-message="range">please enter a date</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label">Patient</label>
+                <div patients-select
+                     name="patientId"
+                     ng-model="data.patient"></div>
+
+                <div class="errors"
+                     ng-messages="form.patientId.$errors"
+                     ng-if="form.patientId.$invalid">
+                    <div ng-message="exists">please choose a patient</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label">Examiner</label>
+                <div examiners-select
+                     name="examinerId"
+                     ng-model="data.examiner"></div>
+
+                <div class="errors"
+                     ng-messages="form.examinerId.$error"
+                     ng-if="form.examinerId.$invalid">
+                    <div ng-message="exists">please choose an examiner</div>
+                </div>
+            </div>
+        </div>
+        <div class="examination-row">
+            <div class="form-group">
+                <span class="pull-right">
+                    <button class="btn btn-primary"
+                            ng-click="create()">
+                        Create
+                    </button>
                 </span>
             </div>
-
-            <div class="errors"
-                 ng-messages="form.takenOn.$errors"
-                 ng-if="form.takenOn.$invalid">
-                <div ng-message="range">please enter a date</div>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label">Patient</label>
-            <div patients-select
-                 name="patientId"
-                 ng-model="data.patient"></div>
-
-            <div class="errors"
-                 ng-messages="form.patientId.$errors"
-                 ng-if="form.patientId.$invalid">
-                <div ng-message="exists">please choose a patient</div>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label">Examiner</label>
-            <div examiners-select
-                 name="examinerId"
-                 ng-model="data.examiner"></div>
-
-            <div class="errors"
-                 ng-messages="form.examinerId.$error"
-                 ng-if="form.examinerId.$invalid">
-                <div ng-message="exists">please choose an examiner</div>
-            </div>
-        </div>
-        <hr />
-        <div class="form-group">
-            <span class="pull-right">
-                <button class="btn btn-primary"
-                        ng-click="create()">
-                    Create
-                </button>
-            </span>
         </div>
     </form>
 
