--- a/src/Antix.EASI.Web/client/examinations/region-score/examination-region-score.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/region-score/examination-region-score.cshtml
@@ -1,42 +1,44 @@
 ﻿<div class="examination-region-score">
-    <div class="row">
-        <label class="control-label col-md-3">Erthema</label>
-        <div class="col-md-9">
+    <div class="examination-severity-score-row">
+        <label class="control-label">Erthema</label>
+        <div>
             <div examination-severity-score
                  ng-model="model.erthema"></div>
         </div>
     </div>
-    <div class="row">
-        <label class="control-label col-md-3">Edema Papulation</label>
-        <div class="col-md-9">
+    <div class="examination-severity-score-row">
+        <label class="control-label">Edema Papulation</label>
+        <div>
             <div examination-severity-score
                  ng-model="model.edemaPapulation"></div>
         </div>
     </div>
-    <div class="row">
-        <label class="control-label col-md-3">Excoriation</label>
-        <div class="col-md-9">
+    <div class="examination-severity-score-row">
+        <label class="control-label">Excoriation</label>
+        <div>
             <div examination-severity-score
                  ng-model="model.excoriation"></div>
         </div>
     </div>
-    <div class="row">
-        <label class="control-label col-md-3">Lichenification</label>
-        <div class="col-md-9">
+    <div class="examination-severity-score-row">
+        <label class="control-label">Lichenification</label>
+        <div>
             <div examination-severity-score
                  ng-model="model.lichenification"></div>
         </div>
     </div>
-    <div class="form-group">
-        <label class="control-label small">Area</label>
-        <div class="btn-group btn-group-justified">
-            <label class="btn btn-default" ng-model="model.area" btn-radio="0">0%</label>
-            <label class="btn btn-default" ng-model="model.area" btn-radio="1">9%</label>
-            <label class="btn btn-default" ng-model="model.area" btn-radio="2">29%</label>
-            <label class="btn btn-default" ng-model="model.area" btn-radio="3">49%</label>
-            <label class="btn btn-default" ng-model="model.area" btn-radio="4">69%</label>
-            <label class="btn btn-default" ng-model="model.area" btn-radio="5">89%</label>
-            <label class="btn btn-default" ng-model="model.area" btn-radio="6">100%</label>
+    <div class="examination-area-score-row">
+        <label class="control-label">Area</label>
+        <div>
+            <div class="btn-group btn-group-justified">
+                <label class="btn btn-default" ng-model="model.area" btn-radio="0">0%</label>
+                <label class="btn btn-default" ng-model="model.area" btn-radio="1">9%</label>
+                <label class="btn btn-default" ng-model="model.area" btn-radio="2">29%</label>
+                <label class="btn btn-default" ng-model="model.area" btn-radio="3">49%</label>
+                <label class="btn btn-default" ng-model="model.area" btn-radio="4">69%</label>
+                <label class="btn btn-default" ng-model="model.area" btn-radio="5">89%</label>
+                <label class="btn btn-default" ng-model="model.area" btn-radio="6">100%</label>
+            </div>
         </div>
     </div>
 </div>
