add border to bottom of tabs

--- a/src/Antix.EASI.Web/client/examinations/edit/examinations-edit.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/edit/examinations-edit.cshtml
@@ -64,7 +64,7 @@
 
             </div>
             <div class="examination-regions">
-                <div tabset justified="true">
+                <div tabset justified="true" class="tabs">
                     <div tab heading="Head and Neck">
                         <div examination-region-score
                              ng-model="data.headNeck"></div>
