use gradient on the tab

--- a/src/Antix.EASI.Web/client/examinations/examinations.less
+++ b/src/Antix.EASI.Web/client/examinations/examinations.less
@@ -23,7 +23,8 @@
 
             .nav-tabs > li {
                 &.active > a {
-                    background-color: inherit;
+                    #gradient.vertical(#fff,#f9f9f9);
+                    background-color: inherit;                   
                     border-bottom-color: #f9f9f9;
                 }
 
