--- a/src/Antix.EASI.Web/client/examinations/examinations.css
+++ b/src/Antix.EASI.Web/client/examinations/examinations.css
@@ -52,6 +52,11 @@
   border-bottom: solid 1px #dddddd;
 }
 .examination-row .examination-regions .tabs .nav-tabs > li.active > a {
+  background-image: -webkit-linear-gradient(top, #ffffff 0%, #f9f9f9 100%);
+  background-image: -o-linear-gradient(top, #ffffff 0%, #f9f9f9 100%);
+  background-image: linear-gradient(to bottom, #ffffff 0%, #f9f9f9 100%);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff9f9f9', GradientType=0);
   background-color: inherit;
   border-bottom-color: #f9f9f9;
 }
