--- a/src/Antix.EASI.Web/client/examinations/edit/examinations-edit.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/edit/examinations-edit.cshtml
@@ -66,7 +66,9 @@
 
         <div class="examination-row">
             <div class="examination-scores-canvas">
-                <div examination-eric ng-model="eric" class="examination-eric"></div>
+                <div examination-eric 
+                     ng-model="eric" 
+                     class="examination-eric"></div>
             </div>
             <div class="examination-regions">
                 <div tabset justified="true" class="tabs">
