--- a/src/Antix.EASI.Web/client/examinations/edit/examinations-eric.less
+++ b/src/Antix.EASI.Web/client/examinations/edit/examinations-eric.less
@@ -4,20 +4,63 @@
     overflow: visible;
 
     svg {
-        padding:10px;
+        padding: 10px;
+
         .head,
         .trunk,
         .legs,
         .arms {
-            fill: transparent;
-            stroke: #666;
-            stroke-dasharray: 4,4;
+            fill:#ccc;
+            stroke: #aaf;
         }
 
-        .active{
-            stroke: #333;
-            stroke-dasharray: none;
+        .active {
+            stroke: #444;
+            stroke-width: 1px;
+        }
 
+        .score0 {
+            fill: rgb(250,250,250);
+        }
+
+        .score1 {
+            fill: rgb(250,225,225);
+        }
+
+        .score2 {
+            fill: rgb(250,200,200);
+        }
+
+        .score3 {
+            fill: rgb(250,175,175);
+        }
+
+        .score4 {
+            fill: rgb(250,150,150);
+        }
+
+        .score5 {
+            fill: rgb(250,125,125);
+        }
+
+        .score6 {
+            fill: rgb(250,100,100);
+        }
+
+        .score7 {
+            fill: rgb(250,75,75);
+        }
+
+        .score8 {
+            fill: rgb(250,50,50);
+        }
+
+        .score9 {
+            fill: rgb(250,25,25);
+        }
+
+        .score10 {
+            fill: rgb(250,0,0);
         }
     }
 }
