--- a/src/Antix.EASI.Web/client/examinations/edit/examinations-eric.less
+++ b/src/Antix.EASI.Web/client/examinations/edit/examinations-eric.less
@@ -11,12 +11,12 @@
         .legs,
         .arms {
             fill:#ccc;
-            stroke: #aaf;
+            stroke: #ccc;
+            stroke-width: 1px;
         }
 
         .active {
             stroke: #444;
-            stroke-width: 1px;
         }
 
         .score0 {
