--- a/src/Antix.EASI.Web/client/examinations/examinations.css
+++ b/src/Antix.EASI.Web/client/examinations/examinations.css
@@ -64,16 +64,16 @@
   border-bottom: solid 1px #dddddd;
 }
 .examination-row .examination-regions .tabs .nav-tabs > li.active > a {
-  background-image: -webkit-linear-gradient(top, #ffffff 0%, #f9f9f9 100%);
-  background-image: -o-linear-gradient(top, #ffffff 0%, #f9f9f9 100%);
-  background-image: linear-gradient(to bottom, #ffffff 0%, #f9f9f9 100%);
+  background-image: -webkit-linear-gradient(top, #ffffff 0%, #e8f1fb 100%);
+  background-image: -o-linear-gradient(top, #ffffff 0%, #e8f1fb 100%);
+  background-image: linear-gradient(to bottom, #ffffff 0%, #e8f1fb 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff9f9f9', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe8f1fb', GradientType=0);
   background-color: inherit;
 }
 @media (min-width: 768px) {
   .examination-row .examination-regions .tabs .nav-tabs > li.active > a {
-    border-bottom-color: #f9f9f9;
+    border-bottom-color: #e8f1fb;
   }
 }
 @media (min-width: 768px) {
