--- a/src/Antix.EASI.Web/Content/bootstrap.variables.less
+++ b/src/Antix.EASI.Web/Content/bootstrap.variables.less
@@ -14,7 +14,7 @@
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@brand-primary:         #369;
+@brand-primary:         #0C479D;
 @brand-success:         #393;
 @brand-info:            #69f;
 @brand-warning:         #f93;
