--- a/src/Antix.EASI.Web/Content/site/layout.less
+++ b/src/Antix.EASI.Web/Content/site/layout.less
@@ -1,4 +1,5 @@
 ﻿@import "../bootstrap.less";
+@import (reference) "variables.less";
 
 html {
     position: relative;
@@ -6,24 +7,40 @@ html {
 }
 
 body {
-    background-color: @gray-lighter;
-    margin-top: 60px;
-    margin-bottom: 60px;
+    background-color: @body-color;
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
     width: 100%;
     height: 50px;
-    background-color: #f5f5f5;
 }
 
-.page-content {
-    background-color: #f9f9f9;
-    min-height: 300px;
+.page-body {
+    padding-top: 90px;
+    padding-bottom: 10px;
+    background-color: @page-body-color;
 
-    > form > .panel {
-        margin: -20px -15px 0;
+    #breadcrumb {
+        top: 50px;
+        min-height:0;
+        margin:0;
+        border-top: 1px solid rgba(0,0,0,.1);
+
+        .breadcrumb{
+            margin:0;
+            padding:4px 0;
+            background-color:transparent;
+        }
+    }
+
+
+    .page-content {
+        background-color: @page-content-color;
+        min-height: 300px;
+        padding-top: 20px;
+
+        > form > .panel {
+            margin: -20px -15px 0;
+        }
     }
 }
