--- a/src/Antix.EASI.Web/client/examinations/create/examinations-create.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/create/examinations-create.cshtml
@@ -1,10 +1,14 @@
-﻿<div id="page-home" class="page-content container">
+﻿<div id="breadcrumb" class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div id="page-home" class="container">
+        <ol class="breadcrumb">
+            <li><a href="#/">Home</a></li>
+            <li><a href="#/examinations/">Examinations</a></li>
+            <li><a href="#/examinations/create">Create</a></li>
+        </ol>
+    </div>
+</div>
 
-    <ol class="breadcrumb row">
-        <li><a href="#/">Home</a></li>
-        <li><a href="#/examinations/">Examinations</a></li>
-        <li><a href="#/examinations/create">Create</a></li>
-    </ol>
+<div id="page-examinations-create" class="page-content container">
 
     <form name="form" class="form" novalidate>
         <h3>
