--- a/src/Antix.EASI.Web/client/examinations/index/examinations-index.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/index/examinations-index.cshtml
@@ -1,9 +1,12 @@
-﻿<div id="page-home" class="page-content container">
-
-    <ol class="breadcrumb row">
-        <li><a href="#/">Home</a></li>
-        <li><a href="#/examinations/">Examination</a></li>
-    </ol>
+﻿<div id="breadcrumb" class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div id="page-home" class="container">
+        <ol class="breadcrumb">
+            <li><a href="#/">Home</a></li>
+            <li><a href="#/examinations/">Examination</a></li>
+        </ol>
+    </div>
+</div>
+<div id="page-examinations-index" class="page-content container">
     
     <div examinations-list="examinations">List of Examinations</div>
 
