--- a/src/Antix.EASI.Web/client/examiners/index/examiners-index.cshtml
+++ b/src/Antix.EASI.Web/client/examiners/index/examiners-index.cshtml
@@ -1,9 +1,13 @@
-﻿<div id="page-home" class="page-content container">
+﻿<div id="breadcrumb" class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div id="page-home" class="container">
+        <ol class="breadcrumb">
+            <li><a href="#/">Home</a></li>
+            <li><a href="#/examiners/">Examiners</a></li>
+        </ol>
+    </div>
+</div>
 
-    <ol class="breadcrumb row">
-        <li><a href="#/">Home</a></li>
-        <li><a href="#/examiners/">Examiners</a></li>
-    </ol>
+<div id="page-examiners-index" class="page-content container">
     
     <div examiners-list="examiners">List of Examiners</div>
 
