--- a/src/Antix.EASI.Web/client/patients/index/patients-index.cshtml
+++ b/src/Antix.EASI.Web/client/patients/index/patients-index.cshtml
@@ -1,10 +1,14 @@
-﻿<div id="page-home" class="page-content container">
+﻿<div id="breadcrumb" class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div id="page-home" class="container">
+        <ol class="breadcrumb">
+            <li><a href="#/">Home</a></li>
+            <li><a href="#/patients/">Patients</a></li>
+        </ol>
+    </div>
+</div>
 
-    <ol class="breadcrumb row">
-        <li><a href="#/">Home</a></li>
-        <li><a href="#/patients/">Patients</a></li>
-    </ol>
-    
+<div id="page-patients-index" class="page-content container">
+
     <div patients-list="patients">List of Patients</div>
 
 </div>
