show total score

--- a/src/Antix.EASI.Web/client/examinations/edit/examinations-eric.css
+++ b/src/Antix.EASI.Web/client/examinations/edit/examinations-eric.css
@@ -14,6 +14,10 @@
   stroke: #ccc;
   stroke-width: 1px;
 }
+.examination-eric svg .total-score {
+  font-size: 60px;
+  fill: #444;
+}
 .examination-eric svg .active {
   stroke: #444;
 }
