--- a/src/Antix.EASI.Web/client/examinations/edit/examinations-eric.less
+++ b/src/Antix.EASI.Web/client/examinations/edit/examinations-eric.less
@@ -10,9 +10,14 @@
         .trunk,
         .legs,
         .arms {
-            fill:#ccc;
+            fill: #ccc;
             stroke: #ccc;
             stroke-width: 1px;
+        }
+
+        .total-score {
+            font-size:60px;
+            fill: #444;
         }
 
         .active {
