--- a/src/Antix.EASI.Web/Content/site/layout.css
+++ b/src/Antix.EASI.Web/Content/site/layout.css
@@ -901,12 +901,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #0c479d;
+  color: #6888a7;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #072756;
+  color: #48627b;
   text-decoration: underline;
 }
 a:focus {
@@ -1139,10 +1139,10 @@ mark,
   color: #777777;
 }
 .text-primary {
-  color: #0c479d;
+  color: #6888a7;
 }
 a.text-primary:hover {
-  color: #08326e;
+  color: #516e8b;
 }
 .text-success {
   color: #3c763d;
@@ -1170,10 +1170,10 @@ a.text-danger:hover {
 }
 .bg-primary {
   color: #fff;
-  background-color: #0c479d;
+  background-color: #6888a7;
 }
 a.bg-primary:hover {
-  background-color: #08326e;
+  background-color: #516e8b;
 }
 .bg-success {
   background-color: #dff0d8;
@@ -2832,8 +2832,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #0c479d;
-  border-color: #0a3c85;
+  background-color: #6888a7;
+  border-color: #5a7b9b;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -2842,8 +2842,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #08326e;
-  border-color: #06234c;
+  background-color: #516e8b;
+  border-color: #445d74;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -2868,11 +2868,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #0c479d;
-  border-color: #0a3c85;
+  background-color: #6888a7;
+  border-color: #5a7b9b;
 }
 .btn-primary .badge {
-  color: #0c479d;
+  color: #6888a7;
   background-color: #ffffff;
 }
 .btn-success {
@@ -3056,7 +3056,7 @@ fieldset[disabled] .btn-danger.active {
   background-color: #ffffff;
 }
 .btn-link {
-  color: #0c479d;
+  color: #6888a7;
   font-weight: normal;
   border-radius: 0;
 }
@@ -3077,7 +3077,7 @@ fieldset[disabled] .btn-link {
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #072756;
+  color: #48627b;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -3223,7 +3223,7 @@ tbody.collapse.in {
   color: #ffffff;
   text-decoration: none;
   outline: 0;
-  background-color: #0c479d;
+  background-color: #6888a7;
 }
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
@@ -3649,7 +3649,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eeeeee;
-  border-color: #0c479d;
+  border-color: #6888a7;
 }
 .nav .nav-divider {
   height: 1px;
@@ -3742,7 +3742,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #0c479d;
+  background-color: #6888a7;
 }
 .nav-stacked > li {
   float: none;
@@ -4368,7 +4368,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   line-height: 1.42857143;
   text-decoration: none;
-  color: #0c479d;
+  color: #6888a7;
   background-color: #ffffff;
   border: 1px solid #dddddd;
   margin-left: -1px;
@@ -4388,7 +4388,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
-  color: #072756;
+  color: #48627b;
   background-color: #eeeeee;
   border-color: #dddddd;
 }
@@ -4400,8 +4400,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > span:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #0c479d;
-  border-color: #0c479d;
+  background-color: #6888a7;
+  border-color: #6888a7;
   cursor: default;
 }
 .pagination > .disabled > span,
@@ -4516,11 +4516,11 @@ a.label:focus {
   background-color: #5e5e5e;
 }
 .label-primary {
-  background-color: #0c479d;
+  background-color: #6888a7;
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
-  background-color: #08326e;
+  background-color: #516e8b;
 }
 .label-success {
   background-color: #339933;
@@ -4583,7 +4583,7 @@ a.badge:focus {
 }
 .list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #0c479d;
+  color: #6888a7;
   background-color: #ffffff;
 }
 .list-group-item > .badge {
@@ -4654,7 +4654,7 @@ a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #0c479d;
+  border-color: #6888a7;
 }
 .thumbnail .caption {
   padding: 9px;
@@ -4768,7 +4768,7 @@ a.thumbnail.active {
   line-height: 21px;
   color: #ffffff;
   text-align: center;
-  background-color: #0c479d;
+  background-color: #6888a7;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -4909,8 +4909,8 @@ a.list-group-item:focus {
 .list-group-item.active:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #0c479d;
-  border-color: #0c479d;
+  background-color: #6888a7;
+  border-color: #6888a7;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
@@ -4926,7 +4926,7 @@ a.list-group-item:focus {
 .list-group-item.active .list-group-item-text,
 .list-group-item.active:hover .list-group-item-text,
 .list-group-item.active:focus .list-group-item-text {
-  color: #80b0f5;
+  color: #e9eef2;
 }
 .list-group-item-success {
   color: #3c763d;
@@ -5270,22 +5270,22 @@ a.list-group-item-danger.active:focus {
   border-bottom-color: #dddddd;
 }
 .panel-primary {
-  border-color: #0c479d;
+  border-color: #6888a7;
 }
 .panel-primary > .panel-heading {
   color: #ffffff;
-  background-color: #0c479d;
-  border-color: #0c479d;
+  background-color: #6888a7;
+  border-color: #6888a7;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #0c479d;
+  border-top-color: #6888a7;
 }
 .panel-primary > .panel-heading .badge {
-  color: #0c479d;
+  color: #6888a7;
   background-color: #ffffff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #0c479d;
+  border-bottom-color: #6888a7;
 }
 .panel-success {
   border-color: #d6e9c6;
@@ -6305,7 +6305,9 @@ body {
   top: 50px;
   min-height: 0;
   margin: 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border: none;
+  border-top: 1px solid rgba(0, 0, 0, 0.05);
+  background-color: #e8f1fb;
 }
 .page-body #breadcrumb .breadcrumb {
   margin: 0;
