--- a/src/Antix.EASI.Web/Content/site/layout.less
+++ b/src/Antix.EASI.Web/Content/site/layout.less
@@ -24,7 +24,9 @@ body {
         top: 50px;
         min-height:0;
         margin:0;
-        border-top: 1px solid rgba(0,0,0,.1);
+        border:none;
+        border-top: 1px solid rgba(0,0,0,.05);
+        background-color: @page-content-color;
 
         .breadcrumb{
             margin:0;
