show eric on the list

--- a/src/Antix.EASI.Web/client/examinations/examinations.less
+++ b/src/Antix.EASI.Web/client/examinations/examinations.less
@@ -105,3 +105,17 @@
 .examination-severity-score {
     padding-bottom: 5px;
 }
+
+.examinations-list-item{
+    .panel-body{
+    min-height:160px;
+    }
+
+    .examination-eric{
+        position:absolute;
+        width:80px;
+    }
+    .examinations-list-item-details{
+        padding-left:120px;
+    }
+}
