--- a/src/Antix.EASI.Web/client/examinations/examinations.css
+++ b/src/Antix.EASI.Web/client/examinations/examinations.css
@@ -184,4 +184,14 @@
 .examination-severity-score {
   padding-bottom: 5px;
 }
+.examinations-list-item .panel-body {
+  min-height: 160px;
+}
+.examinations-list-item .examination-eric {
+  position: absolute;
+  width: 80px;
+}
+.examinations-list-item .examinations-list-item-details {
+  padding-left: 120px;
+}
 /*# sourceMappingURL=examinations.css.map */
