--- a/src/Antix.EASI.Web/Content/site/layout.less
+++ b/src/Antix.EASI.Web/Content/site/layout.less
@@ -27,6 +27,7 @@ body {
         border:none;
         border-top: 1px solid rgba(0,0,0,.05);
         background-color: @page-content-color;
+        z-index:100;
 
         .breadcrumb{
             margin:0;
@@ -39,7 +40,7 @@ body {
     .page-content {
         background-color: @page-content-color;
         min-height: 300px;
-        padding-top: 20px;
+        padding-top: 10px;
 
         > form > .panel {
             margin: -20px -15px 0;
