--- a/src/Antix.EASI.Web/client/patients/list/patients-list-item.cshtml
+++ b/src/Antix.EASI.Web/client/patients/list/patients-list-item.cshtml
@@ -4,7 +4,7 @@
             <div class="btn-group">
                 <a class="editButton btn btn-default"
                    href="#/patients/{{::item.id}}/edit">
-                    <span class="fa fa-pencil"></span>
+                    <span class="fa fa-ellipsis-h"></span>
                 </a>
             </div>
             <h4 class="panel-title">
