--- a/src/Antix.EASI.Web/client/patients/select/patients-select.cshtml
+++ b/src/Antix.EASI.Web/client/patients/select/patients-select.cshtml
@@ -7,7 +7,7 @@
         <div class="input-group-btn">
             <a href="#/patients/{{selected.id}}/edit" class="btn btn-default"
                ng-disabled="!selected.id">
-                <span class="fa fa-pencil"></span>
+                <span class="fa fa-ellipsis-h"></span>
             </a>
             <button create-patient="select(model)"
                     class="btn btn-default">
