--- a/src/Antix.EASI.Web/client/examinations/index/examinations-index.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/index/examinations-index.cshtml
@@ -2,7 +2,7 @@
     <div id="page-home" class="container">
         <ol class="breadcrumb">
             <li><a href="#/">Home</a></li>
-            <li><a href="#/examinations/">Examination</a></li>
+            <li><a href="#/examinations/">Examinations</a></li>
         </ol>
     </div>
 </div>
