--- a/src/Antix.EASI.Web/client/patients/edit/patients-edit.cshtml
+++ b/src/Antix.EASI.Web/client/patients/edit/patients-edit.cshtml
@@ -11,10 +11,9 @@
 <div id="page-patients-edit" class="page-content container">
 
     <form name="form">
-        <h3>
+        <div class="form-icon">
             <span class="fa fa-user-md"></span>
-            Edit Patient
-        </h3>
+        </div>
         <hr />
         <div class="form-group">
             <label class="control-label">Name</label>
