--- a/src/Antix.EASI.Web/client/examinations/create/examinations-create.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/create/examinations-create.cshtml
@@ -11,10 +11,10 @@
 <div id="page-examinations-create" class="page-content container">
 
     <form name="form" class="form" novalidate>
-        <h3>
+        <div class="form-icon">
+            <span class="fa fa-plus"></span>
             <span class="fa fa-clipboard"></span>
-            Create Examination
-        </h3>
+        </div>
 
         <div class="examination-row">
 
