--- a/src/Antix.EASI.Web/client/examinations/edit/examinations-edit.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/edit/examinations-edit.cshtml
@@ -11,10 +11,9 @@
 <div id="page-examinations-edit" class="page-content container">
 
     <form name="form" class="form" novalidate ng-show="data">
-        <h3>
+        <div class="form-icon">
             <span class="fa fa-clipboard"></span>
-            Edit Examination
-        </h3>
+        </div>
 
         <div class="examination-row">
             <div class="examination-date">
