--- a/src/Antix.EASI.Web/client/examiners/create/examiners-create.cshtml
+++ b/src/Antix.EASI.Web/client/examiners/create/examiners-create.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="modal-header">
     <h3 class="panel-title">
+        <span class="fa fa-plus"></span>
         <span class="fa fa-user-md"></span>
-        Create a new Examiner
     </h3>
 </div>
 <form name="form" class="modal-body">
