--- a/src/Antix.EASI.Web/client/examinations/index/examinations-index.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/index/examinations-index.cshtml
@@ -6,7 +6,7 @@
         </ol>
     </div>
 </div>
-<div id="page-examinations-index" class="page-content container">
+<div id="page-examinations-index" class="container">
     
     <div examinations-list="examinations">List of Examinations</div>
 
