--- a/src/Antix.EASI.Web/client/examiners/index/examiners-index.cshtml
+++ b/src/Antix.EASI.Web/client/examiners/index/examiners-index.cshtml
@@ -7,7 +7,7 @@
     </div>
 </div>
 
-<div id="page-examiners-index" class="page-content container">
+<div id="page-examiners-index" class="container">
     
     <div examiners-list="examiners">List of Examiners</div>
 
