--- a/src/Antix.EASI.Web/client/patients/index/patients-index.cshtml
+++ b/src/Antix.EASI.Web/client/patients/index/patients-index.cshtml
@@ -7,7 +7,7 @@
     </div>
 </div>
 
-<div id="page-patients-index" class="page-content container">
+<div id="page-patients-index" class="container">
 
     <div patients-list="patients">List of Patients</div>
 
