--- a/src/Antix.EASI.Web/client/examinations/list/examinations-list-item.cshtml
+++ b/src/Antix.EASI.Web/client/examinations/list/examinations-list-item.cshtml
@@ -1,9 +1,9 @@
 ﻿<div class="examinations-list-item" cell-layout-cell>
-    <div class="panel panel-default">
+    <div class="panel examination-panel">
         <div class="panel-heading">
             <div class="btn-group">
                 <a class="editButton btn btn-default"
-                   href="#/examinations/{{::model.id}}/edit">
+                   ui-sref="examinations-edit({id:model.id})">
                     <span class="fa fa-ellipsis-h"></span>
                 </a>
             </div>
@@ -16,19 +16,24 @@
             <div examination-eric
                  ng-model="eric"
                  class="examination-eric"></div>
-            
+
             <div class="examinations-list-item-details">
                 <div class="row">
                     <label class="col-sm-4">Patient</label>
-                    <span class="col-sm-8">{{model.patient | patientName}}</span>
+                    <a ui-sref="patients-edit({id:model.patient.id})" class="col-sm-8">{{model.patient | patientName}}</a>
                 </div>
                 <div class="row">
                     <label class="col-sm-4">Examiner</label>
-                    <span class="col-sm-8">{{model.examiner | examinerName}}</span>
+                    <a ui-sref="examiners-edit({id:model.examiner.id})" class="col-sm-8">{{model.examiner | examinerName}}</a>
                 </div>
                 <label>Notes</label>
                 <div ng-bind-html="model.notes | textToHtml"></div>
             </div>
+        </div>
+        <div class="panel-footer text-right">
+            <a ui-sref="examinations-edit({id:model.id})">
+                go to details &hellip;
+            </a>
         </div>
     </div>
 </div>
