--- a/src/Antix.EASI.Web/client/app-layout.cshtml
+++ b/src/Antix.EASI.Web/client/app-layout.cshtml
@@ -18,7 +18,7 @@
 </head>
 
 <body ng-app="antix.easi" ng-controller="AppController" antix-season>
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="page-nav navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="navbar-inner container">
             <div class="navbar-header">
                 <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse"
